# DNS-relay

./: .gitignore  CMakeLists.txt  cache.c  cache.h  database.c  database.h  dns.c  dns.h  dnsrelay.txt  logger.c  logger.h  lookup.c  lookup.h  main.c  main.h  platform.h  pool.c  pool.h  protocol.c  protocol.h
